...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EVM-MR-6Za" userLabel="Container">
                                <rect key="frame" x="-4" y="20" width="383" height="647"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" tag="60" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="2OM-Pj-xHA" customClass="HoshiTextField" customModule="TextFieldEffects">
                                        <rect key="frame" x="60" y="323" width="263" height="50"/>
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="ROo-1g-sYO"/>
                                        </constraints>
...
                                        <rect key="frame" x="60" y="451" width="263" height="44"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="JIB-cu-vR3"/>
                                        </constraints>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <state key="selected">
                                            <color key="titleColor" red="0.074850907699999997" green="0.5086777133" blue="0.55161676719999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <state key="highlighted">
...
