...
                </imageView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VFm-Dn-7d9">
                    <rect key="frame" x="230" y="0.0" width="75" height="87"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="75" id="qEW-35-jCO"/>
                    </constraints>
                    <state key="normal" title="Rent"/>
                    <connections>
                        <action selector="rentClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="TwG-zd-LVG"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
